# rootstock-wallet

./: .env.example  .gitignore  Cargo.toml  Commands.md  README copy.MD  README.MD  config.toml  contacts copy.json  contts.json  index.html  mined.json  new  phonebook.json  re.json  rootstock-wallet.json  run-tests.sh  setup-hooks.sh  tokens.json  transactions.csv  wallet copy 2.json  wallet copy 3.json  wallet copy.json  wallet-demo.cast
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  format.yml
src/: client.rs  contacts.rs  history.rs  history_clone.rs  lib.rs  main copy.rs  main.rs  network.rs  provider.rs  qr.rs  registry.rs  setup.rs  transactions.rs  wallet.rs  web.rs
src/api/: mod.rs
src/commands/: api.rs  balance.rs  config.rs  contacts.rs  history.rs  mod.rs  root.rs  tokens.rs  traits.rs  transfer.rs  tx.rs  wallet.rs
src/config/: config.rs  doctor.rs  mod.rs  settings.rs  setup.rs
src/integration_tests/: as_estimation_integration.rs  balance_integration.rs  network_integration.rs  transfer_integration.rs  transfer_token_integration.rs  wallet_integration.rs
src/interactive/: balance.rs  bulk_transfer.rs  config.rs  contacts.rs  history.rs  mod.rs  system.rs  tokens.rs  transfer.rs  transfer_preview.rs  tx.rs  wallet.rs
src/security/: mod.rs  redacted_debug.rs  secure_api_key.rs  secure_http_client.rs  secure_logging.rs  secure_password.rs  secure_string.rs  security_validation_tests.rs  test_utils.rs
src/tests/: client_tests.rs  provider_tests.rs  qr_tests.rs  transactions_tests.rs  wallet_tests.rs
src/tui/: app.rs  mod.rs  (+1 more)
(+13 files in other folders)
