[package]
name = "rootstock-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
bip32 = "0.5.3"
bip39 = "2.1.0"
hdpath = "0.6.3"
hex = "0.4.3"
image = "0.25.6"
qrcode = "0.14.1"
rand = "0.9.0"
secp256k1 = { version = "0.30.0", features = ["rand"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha3 = "0.10.8"
tokio = { version = "1.44.2", features = ["full"] }
zeroize = "1.8.1"
ethers = { version = "2.0.14", features = ["legacy"] }  # Legacy for EIP-1559 support
ethers-providers = "2.0"
thiserror = "2.0.12"
clap = { version = "4.5.36", features = ["derive"] }
k256 = "0.13.4"
env_logger = "0.11.8"
log = "0.4.27"
dotenv = "0.15.0"
