[package]
name = "rootstock-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
bip32 = "0.5.3"
bip39 = "2.1.0"
hdpath = "0.6.3"
hex = "0.4.3"
image = "0.25.6"
qrcode = "0.14.1"
secp256k1 = { version = "0.28.2", features = ["rand"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha3 = "0.10.8"
tokio = { version = "1.45.1", features = ["full"] }
zeroize = "1.8.1"
ethers = { version = "2.0.14", features = ["legacy"] }  # Legacy for EIP-1559 support
ethers-providers = "2.0"
thiserror = "2.0.12"
clap = { version = "4.5.36", features = ["derive"] }
k256 = "0.13.4"
env_logger = "0.11.8"
log = "0.4.27"
dotenv = "0.15.0"
reqwest = { version = "0.12.15", features = ["json"] }
colored = "3.0.0"
tempfile = "3.20.0"
eth-keystore = "0.5.0"
rand = "0.8.5"
indicatif = "0.17.11"
